# missabrick

./: .bowerrc  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  bower.json  compose.yaml  config.py  devbox.json  docker-compose.yml  hatch.toml  make_celery.py  missabrick.py  nginx.default  noxfile.py  package-lock.json  package.json  pyproject.toml  requirements.txt  ruff.toml  ruff_defaults.toml  start.sh  tailwind.config.js
.backup/: missabrick.py  postcss.config.js  tailwind.config.js  webpack.config.js
.backup/app/: datasets.py  logging.py  utils.py
.backup/src/: index.js
.django-old/: docker-compose.yml  manage.py  nginx.default  requirements.txt
.django-old/missabrick/: asgi.py  settings.py  urls.py
.django-old/scripts/: load_rebrickable.py
.github/workflows/: publish.yml
app/: __init__.py  app.py  celery.py  config.py  datasets.py  errors.py  extensions.py  factories.py  models.py  routes.py  services.py  settings.py  types.py  utils.py
app/catalog/: __init__.py  forms.py  models.py  scripts.py  services.py  utils.py  views.py
app/cli/: user.py
app/controllers/: abstract.py  explore.py  login.py  report.py
app/dao/: _generic.py  catalog.py  user.py
app/database/: __init__.py  rebrickable.py  sqlite.py  utils.py
components/: DownloadSetButton.jsx  Dropzone.jsx  Greeting.jsx  SetCard.jsx  UploadButton.jsx  icons.js  index.js
etc/: nginx.conf
legoapp/: models.py  tasks.py  urls.py  views.py
missabrick/: __init__.py  celery.py  settings.py  urls.py  wsgi.py
scripts/: load_rebrickable.py
(+150 files in other folders)
