[project]
name = "missabrick"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas==2.2.2",
  "openpyxl==3.1.2",
  "requests==2.31.0",
  "python-dotenv==1.0.1",
  "flask==3.0.3",
  "flask-sqlalchemy==3.1.1",
  "flask-wtf==1.2.1",
  "sqlalchemy-utils==0.41.2",
  "passlib==1.7.4",
  "flask-migrate==4.0.7",
  "flask-session[cachelib]==0.8.0",
  "itsdangerous==2.2.0",
  "sendgrid==6.11.0",
  "flask-htmx==0.3.2",
  "jinja-partials==0.1.1",
  "injector==0.21.0",
  "flask-injector==0.15.0",
  "celery[redis]==5.4.0",
  "flower==2.0.1",
  "pydantic==2.7.0",
  "pydantic_settings==2.2.1"
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py311"
extend-exclude = [ "migrations/**.py" ]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[dependency-groups]
dev = [
  "ruff>=0.8.6",
]
